--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,9 +4,14 @@ project(LabyrinthSpirit)
 
 set(CMAKE_C_STANDARD 11)
 
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(deps REQUIRED IMPORTED_TARGET guile-3.0)
+
 add_executable(${PROJECT_NAME}
+  character.c
   engine.c
   interface.c
+  position.c
   main.c
 )
 
@@ -19,4 +24,5 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin/)
 
 target_link_libraries(${PROJECT_NAME}
   raylib
+  PkgConfig::deps
   )
